<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect MySQL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="server_name">Server Name</string>
    <string name="connect_to_mysql_db">Connect to MySQL DB</string>
    <string name="port_number">Port Number</string>
    <string name="labUserName">User Name</string>
    <string name="labPwd">Password</string>
    <string name="connect_but_text">Connect to DB</string>

</resources>
